--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 body {
     background-color: #fffaf5;
     padding: 0;
     margin: 0;
+    font-family: 'Merriweather', serif;
 }
 html {
     scroll-behavior: smooth;
@@ -60,9 +62,6 @@ nav {
 }
 .tos p {
     font-size: 1.3rem;
-}
-#tos {
-    font-family: 'EB Garamond', serif;
 }
 .index .container {
     margin: 0;
